--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,10 @@ body {
     font-family: 'Supreme', sans-serif !important;
 }
 
+.supreme {
+    font-family: 'Supreme', sans-serif !important;
+}
+
 .pally {
     font-family: 'Pally', sans-serif !important;
 }
