--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,9 @@ body {
 .pally {
     font-family: 'Pally', sans-serif !important;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none !important;
+    margin: 0 !important;
+}
